--- a/.kitchen.docker.yml
+++ b/.kitchen.docker.yml
@@ -23,6 +23,9 @@ provisioner:
 
 platforms:
   - name: ubuntu-18.04
+    driver_config:
+# https://github.com/test-kitchen/kitchen-docker/issues/285
+      provision_command: mkdir -p /run/sshd
   - name: ubuntu-16.04
   - name: ubuntu-14.04
   - name: centos-7
