travis lxd: after_failure debug, after_script

--- a/.travis.yml
+++ b/.travis.yml
@@ -94,7 +94,16 @@ script:
 ## FIXME! Travis request: Build config file had a parse error: "mapping values are not allowed in this context at line 72 column 321".
 #  - sudo -E su $USER -c "lxc exec run-${distribution}-${version//./} -- ansible-playbook -i inventory /etc/ansible/roles/juju4.MISP/test/integration/default/default.yml --connection=local --become | tee /tmp/idempotency.log | grep -q 'changed=0.*failed=0'  && (echo 'Idempotence test: pass' && exit 0) || (echo 'Idempotence test: fail' && cat /tmp/idempotency.log && exit 1)"
   - sudo -E su $USER -c "lxc exec run-${distribution}-${version//./} -- time sh -x /etc/ansible/roles/juju4.MISP/test/integration/default/serverspec/run-local-tests.sh"
-  - sudo -E su $USER -c "lxc stop run-${distribution}-${version//./}"
+
+after_failure:
+  # Check what happened on systemd systems.
+  - sudo -E su $USER -c "lxc exec run-${distribution}-${version//./} -- systemctl -l --no-pager status"
+  - sudo -E su $USER -c "lxc exec run-${distribution}-${version//./} -- journalctl -xe --no-pager"
+  - sudo -E su $USER -c "lxc exec run-${distribution}-${version//./} -- cat /etc/default/rng-tools"
+  - sudo -E su $USER -c "lxc exec run-${distribution}-${version//./} -- cat /etc/default/rng-tools"
+
+after_script:
+  - sudo -E su $USER -c "lxc stop run-${distribution}-${version//./} --force"
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
