--- a/.travis.yml
+++ b/.travis.yml
@@ -100,7 +100,7 @@ after_failure:
   - sudo -E su $USER -c "lxc exec run-${distribution}-${version//./} -- systemctl -l --no-pager status"
   - sudo -E su $USER -c "lxc exec run-${distribution}-${version//./} -- journalctl -xe --no-pager"
   - sudo -E su $USER -c "lxc exec run-${distribution}-${version//./} -- cat /etc/default/rng-tools"
-  - sudo -E su $USER -c "lxc exec run-${distribution}-${version//./} -- cat /etc/default/rng-tools"
+  - sudo -E su $USER -c "lxc exec run-${distribution}-${version//./} -- ls -l /var/www/MISP/.gnupg/"
 
 after_script:
   - sudo -E su $USER -c "lxc stop run-${distribution}-${version//./} --force"
