travis/lxd: align after_failure debug with travis/docker

--- a/.travis.yml
+++ b/.travis.yml
@@ -97,10 +97,16 @@ script:
 
 after_failure:
   # Check what happened on systemd systems.
+  - sudo -E su $USER -c "lxc exec run-${distribution}-${version//./} -- systemctl -l --no-pager status apache2"
+  - sudo -E su $USER -c "lxc exec run-${distribution}-${version//./} -- systemctl -l --no-pager status nginx"
+  - sudo -E su $USER -c "lxc exec run-${distribution}-${version//./} -- systemctl -l --no-pager status redis"
   - sudo -E su $USER -c "lxc exec run-${distribution}-${version//./} -- systemctl -l --no-pager status"
   - sudo -E su $USER -c "lxc exec run-${distribution}-${version//./} -- journalctl -xe --no-pager"
   - sudo -E su $USER -c "lxc exec run-${distribution}-${version//./} -- cat /etc/default/rng-tools"
   - sudo -E su $USER -c "lxc exec run-${distribution}-${version//./} -- ls -l /var/www/MISP/.gnupg/"
+  - sudo -E su $USER -c "lxc exec run-${distribution}-${version//./} -- ls -l /var/log/redis"
+  - sudo -E su $USER -c "lxc exec run-${distribution}-${version//./} -- cat /var/log/redis/redis.log"
+  - sudo -E su $USER -c "lxc exec run-${distribution}-${version//./} -- cat /var/log/redis/redis-server.log"
 
 after_script:
   - sudo -E su $USER -c "lxc stop run-${distribution}-${version//./} --force"
