--- a/vars/Ubuntu-18.04.yml
+++ b/vars/Ubuntu-18.04.yml
@@ -78,3 +78,4 @@ php_confenable: /etc/php/7.2/apache2/conf.d
 nginx_sock: /run/php/php7.2-fpm.sock
 fpm_user: www-data
 
+gnupg_privdir: "{{ misp_rootdir }}/.gnupg/private-keys-v1.d"
