--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -25,6 +25,7 @@ provisioner:
   ansible_connection: ssh
 
 platforms:
+  - name: ubuntu-18.04
   - name: ubuntu-16.04
   - name: ubuntu-14.04
 #  - name: ubuntu-12.04
