test/default: missing ip and port

--- a/test/integration/default/default.yml
+++ b/test/integration/default/default.yml
@@ -8,6 +8,8 @@
     - misp_testing_key_file: "{{ misp_key_file }}"
 #    - misp_testing_key_file: "{{ misp_testing_user_home }}/build/key.txt"
     - misp_base_url: http://localhost
+    - misp_base_ip: 127.0.0.1
+    - misp_base_port: 80
     - misp_webusers_list:
         - { p: 'dupont_passphrase.', email: dupont@localhost.local, org: 1, role: 2 }
         - { p: 'dupond_passphrase.', email: dupond@localhost.local, org: 1, role: 4 }
