--- a/tasks/misp-add-users.yml
+++ b/tasks/misp-add-users.yml
@@ -5,7 +5,7 @@
 - stat: path="{{ misp_rootdir }}/.admin_pass_set"
   register: ap
 - name: set admin password
-  command: "{{ misp_rootdir }}/app/Console/cake Password admin@admin.test \"{{ misp_web_pass }}\""
+  command: "{{ misp_rootdir }}/app/Console/cake Password \"{{ misp_web_user }}\" \"{{ misp_web_pass }}\""
   when: not ap.stat.exists
 - name: Admin pass set marker
   file: dest="{{ misp_rootdir }}/.admin_pass_set" state=touch
