--- a/tasks/apache2.yml
+++ b/tasks/apache2.yml
@@ -1,12 +1,21 @@
 ---
 
 ## FIXME! or ssl ?
-- name: Configure apache
-  template:
-    src: apache2-misp.conf.j2
+#- command: "rsync -ci {{ misp_rootdir }}/INSTALL/apache.misp.ssl {{ apache_sitedir }}/misp-ssl.conf"
+- name: Configure MISP with Apache
+  copy:
+    src: "{{ misp_rootdir }}/INSTALL/apache.misp.ubuntu"
     dest: "{{ apache_sitedir }}/misp.conf"
     mode: '0644'
-    backup: yes
+  notify:
+    - restart webserver
+
+- name: redhat | update log path
+  replace: "dest={{ apache_sitedir }}/misp.conf regexp='/var/log/apache2/' replace='{{ apache_logs }}/'"
+  when: ansible_os_family == "RedHat"
+
+- name: Ensure misp apache config has correct permissions
+  file: dest="{{ apache_sitedir }}/misp.conf" mode=0644
 
 - name: Debian | Disable default apache config
   file: dest=/etc/apache2/sites-enabled/000-default.conf state=absent
