Revert "Revert "use template for apache config""
This reverts commit 228b9435453838c2adf146c01dc9bc7549187e83.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -25,6 +25,7 @@ userkey: ''
 
 ## value for kitchen forwarding
 misp_base_url: http://127.0.0.1:8888
+misp_servername: misp.local
 misp_email: root@localhost
 misp_gpg_email: "{{ misp_email }}"
 misp_gpg_homedir: "{{ misp_rootdir }}/.gnupg"
