--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -25,6 +25,8 @@ misp_testing_user_home: ''
 userkey: ''
 
 ## value for kitchen forwarding
+misp_base_ip: 127.0.0.1
+misp_base_port: 8888
 misp_base_url: http://127.0.0.1:8888
 misp_servername: misp.local
 misp_email: root@localhost
