missing policycoreutils-python for sefcontext module

--- a/vars/RedHat-7.yml
+++ b/vars/RedHat-7.yml
@@ -49,6 +49,7 @@ misp_pkg_list:
 ## pillow? not needed
 #    - libjpeg-turbo-devel
     - openssl
+    - policycoreutils-python
 
 misp_webserver_apache2:
     - httpd
