--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -305,7 +305,7 @@
   when: ansible_os_family == "RedHat"
 
 - include: selinux-context.yml
-  when: ansible_os_family == "RedHat"
+  when: ansible_os_family == "RedHat" and ansible_selinux.status is defined and ansible_selinux.status != 'disabled'
 
 - block:
     - name: docker redis workaround ???
