--- a/tasks/redhat-logrotate.yml
+++ b/tasks/redhat-logrotate.yml
@@ -13,6 +13,7 @@
     target: "{{ misp_rootdir }}/app/tmp/logs(/.*)?"
     setype: httpd_log_t
     state: present
+  when: ansible_selinux.status is defined and ansible_selinux.status != 'disabled'
 
 - name: Allow logrotate to read /var/www
   command: "{{ item.c }}"
@@ -22,3 +23,4 @@
     - { c: "checkmodule -M -m -o /root/misplogrotate.mod {{ misp_rootdir }}/INSTALL/misplogrotate.te", t: "/root/misplogrotate.mod" }
     - { c: "semodule_package -o /root/misplogrotate.pp -m /root/misplogrotate.mod", t: "/root/misplogrotate.pp" }
     - { c: "semodule -i /root/misplogrotate.pp", t: "/tmp/doesnotexist" }
+  when: ansible_selinux.status is defined and ansible_selinux.status != 'disabled'
