Revert "manual command for chcon as sefcontext module does not seem to work"
This reverts commit abb40b5d9cb9da991bd04ea42c84b2d699e4d142.

--- a/tasks/selinux-context.yml
+++ b/tasks/selinux-context.yml
@@ -1,12 +1,10 @@
 ---
 
 - name: RedHat | Ensure selinux context for MISP httpd directories
-  command: "chcon -R httpd_sys_rw_content_t {{ item }}"
-# FIXME! sefcontext module not working
-#  sefcontext:
-#    target: "{{ item }}(/.*)?"
-#    setype: httpd_sys_rw_content_t
-#    state: present
+  sefcontext:
+    target: "{{ item }}(/.*)?"
+    setype: httpd_sys_rw_content_t
+    state: present
   with_items:
     - /var/www/MISP/app/files
     - /var/www/MISP/app/files/terms
