vagrant/kitchen ansible: add profile_tasks and timer

--- a/.kitchen.docker.yml
+++ b/.kitchen.docker.yml
@@ -15,6 +15,7 @@ provisioner:
   ansible_verbose: false
   ansible_verbosity: 4
   ansible_extra_flags: <%= ENV['ANSIBLE_EXTRA_FLAGS'] %>
+  ansible_cfg_path: test/vagrant/ansible.cfg
 #  require_chef_omnibus: false
   require_ansible_omnibus: true
 #  require_chef_for_busser: false
