--- a/.kitchen.vagrant.yml
+++ b/.kitchen.vagrant.yml
@@ -19,7 +19,7 @@ provisioner:
   ansible_verbose: false
   ansible_verbosity: 3
   ansible_extra_flags: <%= ENV['ANSIBLE_EXTRA_FLAGS'] %>
-#  name: chef_solo
+  ansible_cfg_path: test/vagrant/ansible.cfg
 
 platforms:
   - name: ubuntu-18.04
