--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ env:
 #    version: 12.04
 #  - distribution: alpine
 #    version: 3.4
+#  - distribution: debian
+#    version: stretch
 
 before_install:
   - env
@@ -49,8 +51,6 @@ before_install:
   - sudo service lxd restart
 
   - sudo pip install ansible
-## need to use chef gem for some reason? BAD PATH https://github.com/chef/chef-dk/issues/15
-#  - chef gem install kitchen
   - gem install kitchen
   - gem install kitchen-ansible
   - gem install kitchen-sync
@@ -70,6 +70,9 @@ before_install:
 script:
 #  - KITCHEN_LOCAL_YAML=.kitchen.local.yml bundle exec kitchen verify ${INSTANCE}
   - sudo -E su $USER -c "env PATH=$PATH kitchen verify default-${distribution}-${version//./} -l debug || (cat $HOME/.kitchen/logs/default-${distribution}-${version//./}.log; find /tmp/kitchen)"
+
+after_script:
+  - sudo -E su $USER -c "env PATH=$PATH kitchen destroy default-${distribution}-${version//./} -l debug || (cat $HOME/.kitchen/logs/default-${distribution}-${version//./}.log; find /tmp/kitchen)"
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
