--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -12,6 +12,8 @@ mispmodules_rootdir: /opt
 misp_webserver: 'apache2'
 #misp_webserver: 'nginx'
 misp_fcgi_enable: false
+misp_lief_enable: true
+#misp_lief_rootdir: /var/lief
 
 misp_pip_cybox_version: '2.1.0.12'
 misp_pip_stix_version: '1.1.1.4'
