centos7: use chcon command instead of ansible module as regexp match does not seem to be recursive

--- a/tasks/selinux-context.yml
+++ b/tasks/selinux-context.yml
@@ -1,16 +1,18 @@
 ---
 
 - name: RedHat | Ensure selinux context for MISP httpd directories
-  sefcontext:
-    target: "{{ item }}(/.*)?"
-    setype: httpd_sys_rw_content_t
-    state: present
+  command: "chcon -R -t httpd_sys_rw_content_t {{ item }}"
+#  sefcontext:
+#    target: "{{ item }}(/.*)?"
+#    setype: httpd_sys_rw_content_t
+#    state: present
   with_items:
     - /var/www/MISP/app/files
     - /var/www/MISP/app/files/terms
     - /var/www/MISP/app/files/scripts/tmp
     - /var/www/MISP/app/Plugin/CakeResque/tmp
     - /var/www/MISP/app/tmp
+    - /var/www/MISP/app/tmp/cache/persistent
     - /var/www/MISP/app/webroot/img/orgs
     - /var/www/MISP/app/webroot/img/custom
     - "{{ misp_rootdir }}/.gnupg"
