--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -23,6 +23,7 @@ provisioner:
 #  require_chef_for_busser: false
   enable_yum_epel: true
   ansible_connection: ssh
+  ansible_version: 2.5.5
 
 platforms:
   - name: ubuntu-18.04
