rhel7/selinux: allow write config.php

--- a/tasks/selinux-context.yml
+++ b/tasks/selinux-context.yml
@@ -16,3 +16,4 @@
     - /var/www/MISP/app/webroot/img/orgs
     - /var/www/MISP/app/webroot/img/custom
     - "{{ misp_rootdir }}/.gnupg"
+    - /var/www/MISP/app/Config/config.php
