redis hardening: requirepass, rename commands

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -76,3 +76,11 @@ misp_git_signing_keys:
   - '09E2CD4944E6CBCD'
 
 misp_pymisp_verifycert: False
+
+misp_redis_password: redis_password_to_change
+misp_redis_securecommands:
+    - { re: '^rename-command FLUSHDB .*', l: 'rename-command FLUSHDB ""' }
+    - { re: '^rename-command FLUSHALL .*', l: 'rename-command FLUSHALL ""' }
+    - { re: '^rename-command DEBUG .*', l: 'rename-command DEBUG ""' }
+    - { re: '^rename-command SHUTDOWN .*', l: 'rename-command SHUTDOWN SHUTDOWN_MISP1234' }
+    - { re: '^rename-command CONFIG .*', l: 'rename-command CONFIG CONFIG_MISP1234' }
