--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -82,6 +82,8 @@
 ## required for users API
 #  when: ansible_distribution_release == 'xenial'
 
+- include: redis-secure.yml
+
 - name: recover gpg key to check git signed commit
   command: "gpg --keyserver pgp.uni-mainz.de --recv-keys {{ item }}"
   with_items: "{{ misp_git_signing_keys }}"
