--- a/tasks/misp-add-users.yml
+++ b/tasks/misp-add-users.yml
@@ -29,7 +29,7 @@
     - { re: "^misp_url = .*", l: "misp_url = \"{{ misp_base_url }}\"" }
     - { re: "^misp_key = .*", l: "misp_key = \"{{ userkey }}\"" }
     - { re: '^misp_verifycert = .*', l: "misp_verifycert = {{ misp_pymisp_verifycert }}" }
-  no_log: true
+  no_log: "{{ misp_no_log }}"
 
 - name: flush handlers as we need service up for API call
   meta: flush_handlers
