--- a/tasks/testing.yml
+++ b/tasks/testing.yml
@@ -79,7 +79,7 @@
   with_items:
     - "url = \"{{ misp_base_url }}\""
     - "key = \"{{ userkey }}\""
-  no_log: true
+  no_log: "{{ misp_no_log }}"
 - name: symlink key file in examples/events
   file: "src={{ misp_rootdir }}/PyMISP/tests/keys.py dest={{ misp_rootdir }}/PyMISP/examples/events/keys.py state=link force=yes owner={{ misp_testing_user }}"
 - name: symlink key file in PyMISP
