add new pip dependencies pydeep and python-magic (only pip3 for now)

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -82,6 +82,15 @@
 ## required for users API
 #  when: ansible_distribution_release == 'xenial'
 
+- name: install python dependencies with pip - python3, latest
+  pip:
+    name: "{{ item }}"
+    extra_args: '--exists-action=w'
+    executable: pip3
+  with_items:
+    - git+https://github.com/kbandla/pydeep.git
+    - python-magic
+
 - include: redis-secure.yml
 
 - name: recover gpg key to check git signed commit
