--- a/vars/RedHat-6.yml
+++ b/vars/RedHat-6.yml
@@ -54,6 +54,7 @@ misp_webserver_nginx:
 mysql_svc: mysqld
 rng_svc: rngd
 redis_svc: redis
+redis_conf: /etc/redis.conf
 misp_services:
     - "{{ apache_svc }}"
     - "{{ mysql_svc }}"
