--- a/vars/Ubuntu-14.04.yml
+++ b/vars/Ubuntu-14.04.yml
@@ -46,6 +46,7 @@ misp_pkg_list:
 mysql_svc: mysql
 rng_svc: rng-tools
 redis_svc: redis-server
+redis_conf: /etc/redis/redis.conf
 misp_services:
     - "{{ apache_svc }}"
     - "{{ mysql_svc }}"
