review stix, cybox and co requirements

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -16,8 +16,8 @@ misp_lief_enable: true
 misp_lief_rootdir: /var/lief
 misp_config_php_template: config.php.j2
 
-misp_pip_cybox_version: '2.1.0.12'
-misp_pip_stix_version: '1.1.1.4'
+misp_pip_cybox_version: '2.1.0.18.dev0'
+misp_pip_stix_version: '1.2.0.6'
 
 ## for automation of users creation and testing
 misp_key_file: "{{ misp_rootdir }}/.ht_key"
