--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -66,9 +66,6 @@
     - { n: redis, v: '2.10.5' }
 #    - { n: pyzmq, v: '16.0.2' }
     - { n: 'git+https://github.com/MISP/PyMISP.git#egg=Package', v: "{{ misp_version }}" }
-## processed later inside misp_root. not sure if it changes anything
-    - { n: cybox, v: "{{ misp_pip_cybox_version }}" }
-    - { n: stix, v: "{{ misp_pip_stix_version }}" }
 
 ## TODO duplicate from misp-modules/requirements?
 - name: install python dependencies with pip - python3
@@ -77,8 +74,6 @@
     - { n: redis, v: '2.10.5' }
 #    - { n: pyzmq, v: '16.0.2' }
     - { n: 'git+https://github.com/MISP/PyMISP.git#egg=Package', v: "{{ misp_version }}" }
-    - { n: cybox, v: "{{ misp_pip_cybox_version }}" }
-    - { n: stix, v: "{{ misp_pip_stix_version }}" }
 ## required for users API
 #  when: ansible_distribution_release == 'xenial'
 
@@ -137,6 +132,8 @@
 - name: setting core.filemode for git
   command: "git config core.filemode false chdir={{ misp_rootdir }}"
   when: gc.stdout != 'false'
+
+- include: stix-cybox.yml
 
 - include: composer.yml
 
