--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -376,6 +376,17 @@
 
 - include: misp-modules.yml
 
+# FIXME! upstream bug?
+# Notice Error: Undefined variable: dataSource in [/var/www/MISP/app/Model/User.php, line 1104]
+# https://github.com/MISP/MISP/blame/2.4/app/Model/User.php#L1104
+# https://github.com/MISP/MISP/blob/2.4/app/Config/database.default.php#L63
+- name: fix possible upstream error
+  replace:
+    dest: {{ misp_rootdir }}/app/Model/User.php
+    regexp: 'if ($dataSource =='
+    replace: 'if ($datasource =='
+    backup: yes
+
 - include: lief.yml
   when: misp_lief_enable
 
