mixbox: install with pip directly

--- a/tasks/stix-cybox.yml
+++ b/tasks/stix-cybox.yml
@@ -18,7 +18,6 @@
     extra_args: "--exists-action=w"
     executable: pip3
   with_items:
-    - importlib
-    - https://github.com/CybOXProject/mixbox.git
+    - mixbox
     - maec
 
