generate key file - cake userInit => ignore_errors as key is still extracted even if error message

--- a/tasks/misp-key-file.yml
+++ b/tasks/misp-key-file.yml
@@ -12,6 +12,7 @@
       register: userInit
       no_log: "{{ misp_no_log }}"
       failed_when: "'Error' in userInit.stderr"
+      ignore_errors: true
 #    - debug: var=userInit
     - set_fact:
         userkey: "{{ userInit.stdout }}"
